<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        android:contentDescription="@string/content_desc_nav_home" />
    <item
        android:id="@+id/nav_lion"
        android:icon="@drawable/ic_alex"
        android:title="@string/nav_alex"
        android:contentDescription="@string/content_desc_nav_alex" />
    <item
        android:id="@+id/nav_test"
        android:icon="@drawable/ic_test"
        android:title="@string/nav_test"
        android:contentDescription="@string/content_desc_nav_test" />
    <item
        android:id="@+id/nav_exercise"
        android:icon="@drawable/ic_practice"
        android:title="@string/nav_practice"
        android:contentDescription="@string/content_desc_nav_practice" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"
        android:contentDescription="@string/content_desc_nav_settings" />
</menu>

